<resources>
    <string name="app_name">Gymside</string>
    <string name="home">Home</string>
    <string name="routines">Routines</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="routine_details">Routine details</string>
    <string name="exit">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="gymside">Gymside</string>
    <string name="loginViewButton" />
    <string name="logout">logout</string>
    <string name="loginn">Login</string>
    <string name="get_sports">Get Sports</string>
    <string name="avatar">avatar</string>
    <string name="buttonCheck">Button</string>
    <string name="avatar2">avatar</string>
    <string name="avatarr">TODO</string>
    <string name="showProfileGender">TextView</string>
    <string name="gender">Gender:</string>
    <string name="time">time</string>
    <string name="interval">interval</string>
    <string name="default_interval">default interval</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="add_time">add time</string>
    <string name="done">DONE!</string>
    <string name="pencil">TODO</string>
    <string name="verify">Verify</string>
    <string name="code">Code</string>
    <string name="verifyTittle">Upload the code you received at your email to verify your account</string>
    <string name="createAccount">create Account</string>
    <string name="submit">Submit</string>
    <string name="currRating">Current rutine rating is:</string>
    <string name="buttonSave">Save</string>
    <string name="verify_email">Verify Email</string>
    <string name="delete_user">Delete User</string>
    <string name="showAboutMe">About me</string>
    <string name="showFullName">Fullname</string>
    <string name="run_routine">START ROUTINE</string>
    <string name="category_label">Category: </string>
    <string name="detail_label">Detail: </string>
    <string name="rating_label">Rating: </string>
    <string name="invalidData">Invalid Data</string>
    <string name="modifyYourUsername">Modify your username</string>
    <string name="modifyYourName">Modify your name</string>
    <string name="deleteUserQuestion">Are you sure you want to delete your account?</string>
    <string name="modifyUsernameTittle">Modify your username</string>
    <string name="modifyNameTittle">Modify your name</string>
    <string name="enter_new_name">Enter new Name</string>
    <string name="filter">Filter By:</string>
    <string name="homeTittle">Why gymside?</string>
    <string name="difficulty_label">Difficulty:</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="texthome">"    1. Entrenar en casa es más barato     2. Ahorras tiempo     3. Tú pones tu propia agenda     4. Comodidad     5. Eres el dueño de tu entorno al entrenar en casa     6. Siempre tienes el equipo necesario     7. Compartir los ejercicios en familia     8. Si necesitas comer algo, no necesitas comprarlo     9. Al entrenar en casa le dices adiós a las excusas     10. Los individuos que te encuentras en el gimnasio"</string>
    <string-array name="filter_by">
        <item>Date Created</item>
        <item>Average Rating</item>
        <item>Difficulty</item>
        <item>Category</item>
    </string-array>
</resources>