<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <Button
        android:id="@+id/createAccount"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="237dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/createAccount"
        android:textStyle="bold"
        app:iconTint="#FFFFFF" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="534dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/gymside"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/usernameRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="67dp"
        android:autofillHints="@string/username"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/password"
        android:drawableEnd="@drawable/baseline_lock_blackk_18dp"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="166dp"
        android:layout_toStartOf="@+id/buttonRegister"
        android:fontFamily="sans-serif-light"
        android:text="@string/cancel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="67dp"
        android:autofillHints="@string/username"
        android:fontFamily="sans-serif-light"
        android:hint="@string/username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:drawableEnd="@drawable/baseline_person_blackk_18dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/passwordRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="67dp"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:drawableEnd="@drawable/baseline_email_blackk_18dp"/>

    <Button
        android:id="@+id/verifyView"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_below="@+id/emailRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="214dp"
        android:text="@string/verify_email" />

    <TextView
        android:id="@+id/showErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="319dp"
        android:textColor="#FF0000" />


</RelativeLayout>
</androidx.core.widget.NestedScrollView>