<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Register">


    <Button
        android:id="@+id/buttonVerify"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="256dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/verify"
        android:textStyle="bold"
        app:iconTint="#FFFFFF" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="541dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/verifyTittle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="415dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="252dp"
        android:layout_toStartOf="@+id/buttonRegister"
        android:fontFamily="sans-serif-light"
        android:text="@string/cancel"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/codeRegister"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="86dp"
        android:autofillHints="@string/code"
        android:fontFamily="sans-serif-light"
        android:hint="@string/code"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/code" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/passwordRegister"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="442dp"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text="@string/email" />

</RelativeLayout>