<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="264dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login"
            android:textColor="#B1A6A6"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/username"
            android:layout_width="267dp"
            android:layout_height="44dp"
            android:autofillHints="@string/username"
            android:fontFamily="sans-serif-light"
            android:hint="@string/username"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.363" />

        <EditText
            android:id="@+id/password"
            android:layout_width="271dp"
            android:layout_height="47dp"
            android:autofillHints="@string/username"
            android:fontFamily="sans-serif-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.094" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="264dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/signup"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loginButton"
            app:layout_constraintHorizontal_bias="0.419"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Gymside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/gymside"
            android:textAllCaps="false"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.647" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>