<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/profile"
                app:titleTextColor="@color/white" />

            <ImageButton
                android:id="@+id/profileButton"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/roundcorner"
                android:contentDescription="@string/avatar"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555"
                app:srcCompat="@drawable/ic_profile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="135dp"
        android:text="@string/profile"
        android:textSize="50sp"
        android:textStyle="bold" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/blue"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/showProfileName"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="417dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="540dp"
        android:background="@color/blue"
        android:contentDescription="@string/avatarr"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="420dp"
        android:layout_toStartOf="@+id/showProfileName"
        android:fontFamily="sans-serif-light"
        android:text="@string/username"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="308dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/gender"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/showProfileGender"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="302dp"
        android:text="@string/showProfileGender" />


</RelativeLayout>